@@ -1,3 +1,10 @@
+2015-03-03  Martin Rudalics  <rudalics@gmx.at>
+
+	* frame.c (adjust_frame_size): If the pixel sizes remain
+	unchanged but the number of lines or columns of the frame
+	changes, run `window--pixel-to-total' (Bug#19972).
+	(Qwindow_pixel_to_total): DEFSYM it.
+
 2015-03-03  Daniel Colascione  <dancol@dancol.org>
 
 	* print.c (print_object): Print whether a finalizer has
