@@ -1,3 +1,8 @@
+2015-03-03  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.el (window--dump-frame): For pixel height return total
+	number of frame's lines.
+
 2015-03-03  Daniel Colascione  <dancol@dancol.org>
 
 	* emacs-lisp/cl-macs.el (cl-iter-defun): Add cl-iter-defun.
